Preparation for next release
Signed-off-by: Paulo Lopes <pmlopes@gmail.com>